--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "michel/demo",
-    "license": "proprietary",
+    "name": "kilik/tabledemo",
+    "license": "mit",
     "type": "project",
     "autoload": {
         "psr-4": {
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=5.6",
-        "symfony/symfony": "3.0.*",
+        "symfony/symfony": "3.1.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
@@ -54,7 +54,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.5.9"
+            "php": "5.6"
         }
     },
     "extra": {
