--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "willdurand/faker-bundle": "^1.3",
-        "kilik/table": "dev-master"
+        "kilik/table": "dev-master",
+        "eightpoints/guzzle-bundle": "^6.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
