docker don't expose port anymore

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,10 @@
 # home dir to access git information + ssh keys
 HOMEDIR=/home/login
-HTTP_PORT=8080
+VIRTUAL_HOST=tabledemo.localhost
+LETSENCRYPT_HOST=
+LETSENCRYPT_EMAIL=
+
+networks:
+    default:
+        external:
+            name: ${PROXY_NETWORK}
