--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,17 @@ services:
             - ${HOMEDIR}:/var/www/home
     nginx:
         build: docker/nginx
-        ports:
-            - ${HTTP_PORT:-8080}:80
         links:
             - php
         volumes_from:
             - php
+        environment:
+             VIRTUAL_HOST: ${VIRTUAL_HOST}
+             LETSENCRYPT_HOST: ${LETSENCRYPT_HOST}
+             LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
+
+networks:
+    default:
+        external:
+            name: ${PROXY_NETWORK}
+
