fix of .env.dist (docker)

--- a/.env.dist
+++ b/.env.dist
@@ -3,8 +3,5 @@ HOMEDIR=/home/login
 VIRTUAL_HOST=tabledemo.localhost
 LETSENCRYPT_HOST=
 LETSENCRYPT_EMAIL=
+PROXY_NETWORK=webproxy
 
-networks:
-    default:
-        external:
-            name: ${PROXY_NETWORK}
