fix symfony 3.4, add migrations

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,4 @@
-# home dir to access git information + ssh keys
-HOMEDIR=/home/login
-VIRTUAL_HOST=tabledemo.localhost
+VHOST=tabledemo.localhost
 LETSENCRYPT_HOST=
 LETSENCRYPT_EMAIL=
 PROXY_NETWORK=webproxy
-
