--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.4",
         "symfony/symfony": "3.4.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
@@ -27,14 +27,15 @@
         "symfony/monolog-bundle": "^3.2",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0",
-        "willdurand/faker-bundle": "^1.3",
-        "kilik/table": "dev-master",
-        "eightpoints/guzzle-bundle": "^6.0"
+        "kilik/table": "^1.1",
+        "eightpoints/guzzle-bundle": "^6.0",
+        "doctrine/doctrine-migrations-bundle": "^2.0",
+        "hautelook/alice-bundle": "^2.9"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^2.7"
+        "symfony/phpunit-bridge": "^2.7",
+        "willdurand/faker-bundle": "^1.4"
     },
     "scripts": {
         "post-install-cmd": [
@@ -56,7 +57,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.6"
+            "php": "7.4"
         }
     },
     "extra": {
@@ -65,9 +66,6 @@
         "symfony-var-dir": "var",
         "symfony-web-dir": "web",
         "symfony-tests-dir": "tests",
-        "symfony-assets-install": "relative",
-        "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
-        }
+        "symfony-assets-install": "hardcopy"
     }
 }
